@@ -1416,10 +1416,16 @@ grub_relocator_alloc_chunk_align (struct grub_relocator *rel,
 	break;
     }
 
+  grub_dprintf ("relocator", "relocators_size=%ld\n",
+		(unsigned long) rel->relocators_size);
+
   if (chunk->src < chunk->target)
     rel->relocators_size += grub_relocator_backward_size;
   if (chunk->src > chunk->target)
     rel->relocators_size += grub_relocator_forward_size;
+
+  grub_dprintf ("relocator", "relocators_size=%ld\n",
+		(unsigned long) rel->relocators_size);
 
   chunk->size = size;
   chunk->next = rel->chunks;
